--- a/WonderSite/TaskManager/main/templates/main/base.html
+++ b/WonderSite/TaskManager/main/templates/main/base.html
@@ -1,24 +1,23 @@
 <!doctype html>
 <html lang="ru">
 <head>
+<style>
+.center {
+    text-align: center
+}
+</style>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 </head>
-<body>
-    <div class="d-flex flex-column flex-md-row align-items-center pb-2 mb-2 border-bottom">
+<body class="center" bgcolor="#FFCFA5" text="#424242">
         <h1 class="my-0 mr-md-auto font-weihht-normal">WonderWaffles</h1>
-      <nav class="m-4 mt-2 md-3 ms-md-3">
-          <a class="py-2 text-dark" href="{% url 'home' %}">Мои задачи</a>
-          <a class="py-2 text-dark" href="{% url 'about' %}">О нас</a>
-          <a class="py-2 text-dark" href="{% url 'create' %}">Создать задачу</a>
-      </nav>
-    </div>
-
-    <div class="container">
+          <a class="center" href="{% url 'home' %}">Мои задачи</a>
+          <a href="{% url 'about' %}">О нас</a>
+          <a href="{% url 'create' %}">Создать задачу</a>
+    <div class="center" class="container">
         {% block content %}{% endblock %}
     </div>
 </body>
